--- a/style.css
+++ b/style.css
@@ -3,10 +3,52 @@
   margin: 0;
   box-sizing: border-box;
 }
-.header {
-    padding: 10px;
-    text-align: center;
-    background: #8b9a97;
+
+.Afbeelding{
+    width:100%;
+    border-radius: 5px;
+    transition: 0.2s transform;
+}
+
+.kleur{
+  background-color: black;
+  color: white;
+  height: 500px;
+}
+
+.background{
+  background-color: black;
+}
+
+
+footer{
+    /* height: 100px; */
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    background-color: #1f163d;
     color: white;
-    font-size: 30px;
-  }
+}
+
+.footer-left{
+  display: flex;
+  align-items: center;
+}
+
+.footer-right{
+  font-size: 25px;
+  padding-bottom: 10px;
+  padding-right: 5px;
+}
+
+.footerP{
+  display: flex;
+  align-items: right;
+}
+
+.plaatje{
+  display: flex;
+  justify-content: left;
+}
+
+
